# P_sensor

./: .gitignore  Activate.ps1  README.md  p_sensor.code-workspace  pyproject.toml  requirements.txt
P_sensor_v0.1_archive/: ARCHIVE_NOTES.md  p_sensor.code-workspace  requirements.txt
P_sensor_v0.1_archive/docs/: repository_policy_ko.md  setting_requirements.md
P_sensor_v0.1_archive/root_before_merge/: .gitignore
P_sensor_v0.1_archive/root_before_merge/config/: channel_settings.example.json
P_sensor_v0.1_archive/root_before_merge/scripts/: build_exe.ps1  setup_env.ps1
P_sensor_v0.1_archive/root_replaced_during_merge/: .editorconfig  .gitattributes  pyproject.toml
P_sensor_v0.1_archive/root_replaced_during_merge/docs/: github_vscode_cheatsheet_ko.md  project_spec_ko.md
P_sensor_v0.1_archive/root_replaced_during_merge/scripts/: run_app.ps1
P_sensor_v0.1_archive/root_replaced_during_merge/src/p_sensor/: config.py
P_sensor_v0.1_archive/root_replaced_during_merge/src/p_sensor/acquisition/: simulated.py
P_sensor_v0.1_archive/root_replaced_during_merge/src/p_sensor/ui/: main_window.py
P_sensor_v0.2_archive_20260414/: P_sensor.spec  README.md
P_sensor_v0.2_archive_20260414/config/: channel_settings.example.json
P_sensor_v0.2_archive_20260414/scripts/: pip_sync.ps1
config/: channel_settings_ai_only.example.json  channel_settings_automation.example.json  experiment_recipe.example.json  experiment_recipe_smoke.example.json  protocol_fatigue.example.json  protocol_hysteresis.example.json  protocol_speed_dependency.example.json  protocol_step_hold.example.json  shot102_sgsp20_85.example.json  stage_shot702_osms20_35.example.json
docs/: linear_stage_automation_plan_ko.md  project_spec_ko.md  repository_policy_ko.md  scripts_cheatsheet_ko.md
scripts/: check_shot102_stage.ps1  check_shot702_stage.ps1  check_stage.ps1  freeze_requirements.ps1  run_ai_app.ps1  run_app.ps1  run_archive_v02.ps1  run_automation_app.ps1  run_automation_smoke.ps1  run_stage_app.ps1
src/p_sensor/: __main__.py  ai_app.py  app.py  calculations.py  config.py  launcher.py  models.py  profiles.py  stage_app.py  storage.py
(+33 files in other folders)
