[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "p-sensor"
version = "0.3.0"
description = "DAQ GUI application for NI cDAQ-9174 with NI 9234 input and NI 9265 output."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "nidaqmx",
  "numpy",
  "pandas",
  "pyserial",
  "PySide6",
  "pyqtgraph",
]

[project.optional-dependencies]
dev = [
  "pyinstaller",
  "pytest",
  "ruff",
]

[project.scripts]
p-sensor = "p_sensor.launcher:main"
p-sensor-io = "p_sensor.launcher:main_io"
p-sensor-ai = "p_sensor.launcher:main_ai"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "dev_local/tools"]
testpaths = ["dev_local/tests"]
addopts = "-p no:cacheprovider"
norecursedirs = [
  ".venv",
  ".venv_broken",
  "dev_local/examples",
  "dev_local/exports",
  "dev_local/scratch",
  "dev_local/tmp",
  "pytest-cache-files-*",
]

[tool.ruff]
line-length = 100
target-version = "py313"
